[package]
name = "pinned"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitintr = "0.3.0"
lazy_static = "1.4.0"
rand = "0.8.5"
rand_xorshift = "0.3.0"

[profile.release]
lto = true
codegen-units = 1
#strip="none"

[profile.dev]
overflow-checks = false
